# video-converter-rabbit

./: Dockerfile  README.md  dev.env  main.py  pyproject.toml
.github/workflows/: develop.yaml  master.yaml
core/: dependencies.py  exceptions.py  http_client.py  object_storage.py  settings.py
k8s/: configmap.yaml  deployment.yaml  sealed-secret.yaml  secret.txt  secret.yaml
schemas/: file_schema.py
services/: __init__.py  converter_service.py
tests/schemas/: test_file_schema.py  test_file_schemas.py
